correct width for widgets on small-screen devices, no longer css-calc widths; Tested on Windows (FF8, Chrome 15), Built-in browsers of: Samsung Galaxy S2 (Gingerbread), Samsung Galaxy Tab 10.1 (Honeycomb), iPhone 3GS (iOS 5), Samsung Galaxy S (Gingerbread)

--- a/visu/designs/alaska/mobile.css
+++ b/visu/designs/alaska/mobile.css
@@ -1,14 +1,11 @@
-.widget
-{
-  width:98%;
+.widget_container {
+    width: 98%;
 }
 
-#bottom 
-{
-  display: none;
+#bottom {
+    display: none;
 }
 
-.page 
-{
-  overflow: visible;
+.page {
+    overflow: visible;
 }
