--- a/visu/designs/discreet/basic.css
+++ b/visu/designs/discreet/basic.css
@@ -81,10 +81,17 @@ div#top {
   vertical-align: middle;
 }
 
+.widget_container {
+  width: 50%;
+  float: left;
+}
+
+.widget_container .widget_container {
+    width: 100%;
+}
+
 .widget
 {
-  float:left;
-  width:48%;
   margin: .2em;
   padding: 0.3em;
  /* border:yellow 1px solid; */
@@ -96,11 +103,6 @@ div#top {
   border-radius: 8px;
   min-height: 2em;
   background-color: #101010;
-}
-
-.widget .widget
-{
-  width:98%;
 }
 
 .text > div,
